# scitt-for-phi

./: README.md  datatrails-mmr.receipt  model-manifest.json  pyproject.toml  signed-statement.scitt
.devcontainer/: devcontainer.json
acr/: acr_env  log_in_and_upload_to_acr.sh
scitt_for_phi/: intoto.py  print_cose.py  staple_receipt.py  strip_uhdr.py  verify.py
